logo stretch issue fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -112,7 +112,7 @@ a {
 }
 
 .logo-hover-landing {
-  @apply w-[5rem] h-[2rem] md:w-fit md:h-fit grayscale opacity-100 hover:opacity-100 hover:grayscale-0;
+  @apply w-[4.9rem] h-[2rem] sm:w-[5rem] sm:h-[2rem] md:w-fit md:h-fit grayscale opacity-100 hover:opacity-100 hover:grayscale-0;
 }
 
 .logo-hover-staffing {
